# open-kevin

./: .gitignore  .gitmodules  README.md  eval.yaml  kernel_tool.py  kevin_reward.py  kevin_reward_manager.py  kevin_rm.py  launch_training.sh  launch_training_distributed.sh  pyproject.toml  rollout.yaml  rollout_tiny.yaml  run_kevin_grpo.sh  run_kevin_grpo_tiny.sh  system_prompt.py  train.py
conf/: kevin_tool.yaml  rollout.yaml  rollout_tiny.yaml
conf/trainer/: ppo_trainer.yaml
scripts/: split_kernel_bench.py
src/open_kevin/: __init__.py
src/open_kevin/cli/: __init__.py  train.py
src/open_kevin/environments/: kevin_env.py
src/open_kevin/prompts/: __init__.py
src/open_kevin/rewards/: __init__.py  base.py
tests/: conftest.py  test_kernel_tool.py  test_reward.py  unit.py
tools/: cuda_tool.py  kernel_tool.yaml
